# team-joystick

./: Cargo.toml  LICENSE  README.md  adjectives.txt  config.json  hi  nouns.txt  teamlock.json
.github/workflows/: build.yaml
gilrs/gilrs-core/src/: lib.rs
mjoy/: Cargo.toml
mjoy/src/: injoy.rs  joypaths.rs  main.rs
mjoy_common/: Cargo.toml
mjoy_common/src/gui/: feedback_info.rs  mod.rs  team_color.rs
mjoy_common/src/manipulate_emulator/: mod.rs  resize.rs
mjoy_core/: Cargo.toml
mjoy_core/src/: injoy.rs  joypaths.rs  main.rs  outjoy.rs
mjoy_gui/: Cargo.toml
mjoy_gui/src/: diskteamhash.rs  lib.rs  wordhash.rs
mjoy_gui/src/gui/: mod.rs
mjoy_gui/src/manipulate_emulator/: mute.rs  pulse_audio_list_example.txt  resize.rs  wmctl_list_example.txt
resources/: adjectives.txt  nouns.txt  teams.txt
src/: main.rs
src/joystick/: mod.rs
ui_demo/: Cargo.toml
ui_demo/src/: main.rs
