[package]
name = "joystick-daemon"
version = "0.1.0"
authors = ["Gwilym Kuiper <gw@ilym.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
input-linux = "0.5.0"
serialport = "3.3.0"
sdl2 = "0.35.2"
strum = "0.11.0"
strum_macros = "0.11.0"

