[package]
name = "mjoy"
version = "0.3.1"
authors = ["Kevin Kellar <kellar.kevin@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.35.2"
strum = "0.11.0"
strum_macros = "0.11.0"
software-joystick = { git = "https://github.com/kkevlar/software-joystick.git" }
clap = { version = "3.0", features = ["derive"] }
sha2 = "0.10.6"
regex = "1.8.1"
gilrs = {path = "../vendored/gilrs/gilrs"}
#reqwest = {version= "0.11.16", features = ["blocking", "json"]}
image = "0.24.6"
serde = {version = "1.0.160", features = ["derive"]}
serde_json = "1.0.96"
anyhow = "1.0.70"
thiserror = "1.0.40"
kiss3d = "0.35.0"

