[package]
name = "mjoy_core"
version = "0.3.2"
authors = ["Kevin Kellar <kellar.kevin@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.11.0"
strum_macros = "0.11.0"
software-joystick = { git = "https://github.com/kkevlar/software-joystick.git" }
clap = { version = "3.0", features = ["derive"] }
gilrs = {path = "../vendored/gilrs/gilrs"}
serde = {version = "1.0.160", features = ["derive"]}
serde_json = "1.0.96"
mjoy_gui = {path = "../mjoy_gui"}
regex = "1.5.4"
rand = "0.8.5"

