[package]
name = "mjoy_gui"
version = "0.3.1"
authors = ["Kevin Kellar <kellar.kevin@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10.6"
kiss3d = "0.35.0"
regex = "1.5.4"
thiserror = "1.0.30"

