[package]
name = "ui_demo"
version = "0.3.1"
authors = ["Kevin Kellar <kellar.kevin@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mjoy_common = {path = "../mjoy_common"}
regex = "1.8.1"
sha2 = "0.10.6"

